[package]
name = "watchcat-service"
version = "1.3.0"
authors = ["Tobias Tangemann <tobias@tangemann.org>"]
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive", "env"] }
log = "0.4.22"
simple_logger = { version = "5.0.0", default-features = false }
uptime_lib = "0.3.1"
humantime = "2.1.0"
reqwest = { version = "0.12.5", default-features = false, features = [
    "blocking",
    "rustls-tls-native-roots",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
