[package]
name = "watchcat-service"
version = "1.4.1"
authors = ["Tobias Tangemann <tobias@tangemann.org>"]
edition = "2021"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5", features = ["derive", "env"] }
log = "0.4"
simple_logger = { version = "5.0", default-features = false }
uptime_lib = "0.3"
humantime = "2.2"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls-native-roots",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
